--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,2 +1,9 @@
 body
   background: #000
+  color: white
+  text-align: center
+button
+  padding: 1rem 2rem
+  border: none
+  background: white
+  border-radius: 3px  
