--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,35 @@
+@import 'styles/shared';
+@import '~react-input-range/lib/css/index.css';
+
+html,
 body {
-  background: #000;
-  color: white;
-  text-align: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: $color-background;
+  color: $color-foreground;
+  font-family: $font-family;
+  font-size: $base-font-size;
+  font-weight: normal;
+  line-height: $base-line-height;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+strong {
+  font-weight: 500;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.AppRoot {
+  display: flex;
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
 }
